Skip to content

3.0.5 regression: DVD subtitles broken

After updating from 3.0.4 to 3.0.5, DVD subtitles are pretty badly broken for me. Most of the time, subtitles aren't drawn at all, and VLC logs this error:

spudec decoder error: cannot allocate SPU region

Other times, the subtitles are corrupted, and VLC repeats these two error messages:

swscale scale error: could not init SwScaler and/or allocate memory
main subpicture error: scaling failed

I've bisected the regression down to commit 7f690d13 ("picture: align pictures on 64 bytes"). The commit message says that increasing the alignment is okay, since picture_Setup() ensures that sizes are multiples of 512 bytes. But in the vlc-3.0 branch, picture_Setup() adds two extra vertical lines (i_height_extra) after aligning the height to 16. This leads to failures later in AllocatePicture() when i_bytes may not be a multiple of 64.

I can't reproduce this against the master branch, where these two lines were removed by commit 37fba57c ("picture: remove the extra 2 lines per picture for SIMD").

Edited by Rémi Denis-Courmont
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information