picture: align the buffer size to 64

Otherwise aligned_alloc() may fail.

It's OK to allocate more to preserve the alignment.

Fixes #21647